--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "jsx": "react",
-    "jsx": "react",
+    "baseUrl": "src",
+    "paths": {
+      "assets/*": ["assets/*"]
+    },
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
