Add some missed types and throttle for infinit scrolling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "paths": {
       "assets/*": ["assets/*"],
       "@@types/*": [
-        "./@types/*"
+        "src/@types/*"
       ],
     },
     "resolveJsonModule": true,
