--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
-    "@testing-library/user-event": "^14.4.3",
+    "lodash": "^4.17.21",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,7 +31,9 @@
       "^styles/(.*)$": "<rootDir>/src/styles/$1",
       "^helpers/(.*)$": "<rootDir>/src/helpers/$1"
     },
-    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -57,7 +59,9 @@
     "@babel/preset-typescript": "^7.21.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.1",
+    "@types/lodash": "^4.14.202",
     "jest": "^27.5.1"
   }
 }
